# Frogger

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  frogger  main.c
Global_Elements/: Structures.h
chelp/: chelp.c  chelp.h  colors.c  colors.h
files/: file_manager.c  file_manager.h
game/: clock.c  clock.h  data.h  frog.c  frog.h  game_manager.c  game_manager.h
game/audio/: audio_manager.c  audio_manager.h
src/: main.c
src/game/: board.c  clock.c  collide.c  frog.c
src/game/graphics/: graphics.c
src/headers/: board.h  clock.h  collide.h  data.h  debugger.h  frog.h  graphics.h  libraries.h  processing.h  shortcuts.h  structures.h  threading.h
src/utils/: data.c  debugger.c  shortcuts.c  structures.c
src/utils/concurrency/: processing.c  threading.c
utils/: general.h  globalmacros.h  libraries.h  shortcuts.c  shortcuts.h  structures.h
utils/concurrency/: threading.c  threading.h
